--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
     "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-email": "^4.2.11",
-    "react-hook-form": "^7.62.0",
+    "react-hook-form": "^7.63.0",
     "resend": "^6.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.9"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
