--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "migrate:prod": "dotenv -e .env.prod tsx scripts/migrate.ts"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.0.2",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-email/components": "^0.5.3",
     "@react-email/render": "^1.2.3",
+    "@tanstack/react-query": "^5.90.2",
     "better-auth": "^1.3.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
